--- a/src/index.html
+++ b/src/index.html
@@ -20,48 +20,14 @@
         <section class="content">
             <h1>Pokédex</h1>
             <h3>Search for Pokémon by name or using the National Pokédex number.</h3>
-            <ol class="pokelist">
-                <li class="pokemon">
-                    <div class="details">
-                        <h4>#001</h4>
-                        <h2>Bulbasaur</h2>
-                        <ol class="types">
-                            <li class="grass">Grass</li>
-                            <li class="poison">Poison</li>
-                        </ol>
-                    </div>
-                    <div class="image">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg">
-                    </div>
-                </li>
-                <li class="pokemon">
-                    <div class="details">
-                        <h4>#002</h4>
-                        <h2>Ivysaur</h2>
-                        <ol class="types">
-                            <li class="grass">Grass</li>
-                            <li class="poison">Poison</li>
-                        </ol>
-                    </div>
-                    <div class="image">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg">
-                    </div>
-                </li>
-                <li class="pokemon">
-                    <div class="details">
-                        <h4>#003</h4>
-                        <h2>Venusaur</h2>
-                        <ol class="types">
-                            <li class="grass">Grass</li>
-                            <li class="poison">Poison</li>
-                        </ol>
-                    </div>
-                    <div class="image">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg">
-                    </div>
-                </li>
-            </ol>
+            <ol id="pokelist"></ol>
+            <div class="pages">
+                <button type="button" id="loadMore">Load more...</button>
+            </div>
         </section>
     </body>
+    <script src="./assets/js/poke-model.js"></script>
+    <script src="./assets/js/poke-api.js"></script>
+    <script src="./assets/js/helpers.js"></script>
     <script src="./assets/js/main.js"></script>
 </html>
