--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,38 @@
         <!--CSS-->
         <link rel="stylesheet" href="./assets/css/styles.css">
         <link rel="stylesheet" href="./assets/css/pokedex.css">
+        <link rel="stylesheet" href="./assets/css/attributes.css">
     </head>
     <body>
+        <section id="attributes">
+            <div id="wrapper">
+            <div id="cardInfo">
+                <div class="details">
+                    <h4 id="attrID">#001</h4>
+                    <h2 id="attrName">Bulbasaur</h2>
+                    <ol class="types">
+                        <li class="grass" style="background-color:#7AC74C">Grass</li>
+                        <li class="poison" style="background-color:#A33EA1">Poison</li>
+                    </ol>
+                </div>
+                <div class="image">
+                    <img id="attrImage" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg">
+                </div>
+            </div></div>
+            <div id="statsBox">
+                <div id="stats">
+                    <p id="attrDescription">Lorem ipsum dolor sit amet</p>
+                    <h5>Pokédex Data</h5>
+                        <ol>
+                            <li class="first">Species</li> <li id="attrSpecies"></li>
+                            <li class="first">Body Shape</li> <li id="attrShape"></li>
+                            <li class="first">Rarity</li> <li id="attrRarity"></li>
+                            <li class="first">Abilities</li> <li id="attrAbilities"></li>
+                        </ol>
+                </div>
+            </div>
+        </section>
+        <hr>
         <section class="content">
             <h1>Pokédex</h1>
             <h3>Search for Pokémon by name or using the National Pokédex number.</h3>
